--- a/falp.html
+++ b/falp.html
@@ -88,7 +88,7 @@
     <main>
         <!-- Hero image section -->
         <div class="hero-image">
-            <img src="images/FALP/falp-hero.jpg" alt="FALP business card on textured background">
+            <img src="images/06-falp/Prancheta 19.svg" alt="FALP business card on textured background">
         </div>
         
         <!-- Project header section -->
