--- a/SpreadEducationSpreadLove.html
+++ b/SpreadEducationSpreadLove.html
@@ -88,7 +88,7 @@
         <!-- Seção Hero -->
         <div class="hero-image">
             <video class="hero-video" autoplay muted loop playsinline preload="metadata" poster="images/03-SESL/gif-hero-fallback.jpg">
-                <source src="images/03-SESL/gif-hero.mp4" type="video/mp4">
+                <source src="images/03-SESL/Gif_intro-4.mp4" type="video/mp4">
                 <source src="images/03-SESL/gif-hero.webm" type="video/webm">
                 <!-- Fallback image -->
                 Your browser does not support the video tag.
