--- a/index.html
+++ b/index.html
@@ -139,15 +139,18 @@
     <!-- Segunda linha -->
     <div class="grid-item item-3">
       <div class="item-content">
-        <img src="images/06-falp/Business-Card_Mockup.webp" alt="Cartão de visita FALP" loading="lazy">
+         <video autoplay muted loop playsinline poster="images/10-fyted/fyted-fallback.jpg">
+          <source src="images/10-fyted/fyt1.mp4" type="video/mp4">
+          <img src="images/10-fyted/fyted-fallback.jpg" alt="fyted project preview" loading="lazy">
+        </video>
         <div class="overlay">
-          <h3>FALP</h3>
-          <p>Visual identity for the Federation of Portuguese Language Lawyers, promoting legal cooperation among Lusophone countries and human rights.</p>
+          <h3>fyted</h3>
+          <p>A speculative interactive experience revealing how AI job interviews hide bias behind polite efficiency, exposing the human cost of automated hiring systems.</p>
         </div>
-        <a href="falp.html" class="grid-link" aria-label="Ver projeto FALP"></a>
+        <a href="fyted.html" class="grid-link" aria-label="Ver projeto fyted"></a>
       </div>
       <div class="mobile-title">
-        <h3>FALP</h3>
+        <h3>fyted</h3>
       </div>
     </div>
     
@@ -197,19 +200,15 @@
     
     <div class="grid-item item-8">
       <div class="item-content">
-        <!-- Adicionado fallback para o vídeo fyted -->
-        <video autoplay muted loop playsinline poster="images/10-fyted/fyted-fallback.jpg">
-          <source src="images/10-fyted/fyt1.mp4" type="video/mp4">
-          <img src="images/10-fyted/fyted-fallback.jpg" alt="fyted project preview" loading="lazy">
-        </video>
+       <img src="images/06-falp/Business-Card_Mockup.webp" alt="Cartão de visita FALP" loading="lazy">
         <div class="overlay">
-          <h3>fyted</h3>
-          <p>A speculative interactive experience revealing how AI job interviews hide bias behind polite efficiency, exposing the human cost of automated hiring systems.</p>
+          <h3>FALP</h3>
+          <p>Visual identity for the Federation of Portuguese Language Lawyers, promoting legal cooperation among Lusophone countries and human rights.</p>
         </div>
-        <a href="fyted.html" class="grid-link" aria-label="Ver projeto fyted"></a>
+        <a href="falp.html" class="grid-link" aria-label="Ver projeto fyted"></a>
       </div>
       <div class="mobile-title">
-        <h3>fyted</h3>
+        <h3>FALP</h3>
       </div>
     </div>
   </div>
