--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -119,15 +119,15 @@
         <div class="book-spreads">
             <div class="spreads-row">
                 <div class="spread-item">
-                    <img src="images/04-adm/p-introducao.png" alt="Book spread showing table setting diagram">
+                    <img src="images/04-adm/p3.jpg" alt="Book spread showing table setting diagram">
                 </div>
                 <div class="spread-item">
-                    <img src="images/04-adm/p-menu.png" alt="Book spread showing utensils guide">
+                    <img src="images/04-adm/p1.jpg" alt="Book spread showing utensils guide">
                 </div>
             </div>
             <div class="spreads-row">
                 <div class="spread-item">
-                    <img src="images/04-adm/p-vinhos.png" alt="Book spread showing wine guide">
+                    <img src="images/04-adm/p2.jpg" alt="Book spread showing wine guide">
                 </div>
                 <div class="spread-item">
                     <img src="images/04-adm/p-servico-copos.png" alt="Book spread showing etiquette instructions">
