--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -86,7 +86,7 @@
     <main>
         <!-- Hero image section -->
         <div class="hero-image">
-            <img src="images/04-adm/livrofrente_mesa.jpg" alt="A Arte da Mesa book cover on a textured background">
+            <img src="images/04-adm/capa.jpg" alt="A Arte da Mesa book cover on a textured background">
         </div>
         
         <!-- Project title and description section -->
@@ -130,7 +130,7 @@
                     <img src="images/04-adm/p2.jpg" alt="Book spread showing wine guide">
                 </div>
                 <div class="spread-item">
-                    <img src="images/04-adm/p-servico-copos.png" alt="Book spread showing etiquette instructions">
+                    <img src="images/04-adm/" alt="Book spread showing etiquette instructions">
                 </div>
             </div>
         </div>
