--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -130,7 +130,7 @@
                     <img src="images/04-adm/p2.jpg" alt="Book spread showing wine guide">
                 </div>
                 <div class="spread-item">
-                    <img src="images/04-adm/" alt="Book spread showing etiquette instructions">
+                    <img src="images/04-adm/p4.jpg" alt="Book spread showing etiquette instructions">
                 </div>
             </div>
         </div>
