--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <!-- Quarta linha -->
     <div class="grid-item item-7">
       <div class="item-content">
-         <img src="images/01-Homepage/livrofrente_mesa.webp" alt="Livro azul 'Arte da Mesa'" loading="lazy">
+         <img src="images/04-adm/capa.jpg" alt="Livro azul 'Arte da Mesa'" loading="lazy">
         <div class="overlay">
           <h3>A Arte da Mesa</h3>
           <p>Rebranding a book on table etiquette, transforming tradition into a modern, visually engaging experience.</p>
