--- a/falp.html
+++ b/falp.html
@@ -141,9 +141,9 @@
                     <div class="logo-item-large">
                         <img src="images/06-falp/FALP_LOGO - Positivo.svg" alt="FALP Main Logo">
                     </div>
-                    <div class="logo-item-large">
+                    <!-- <div class="logo-item-large">
                         <img src="images/06-falp/FALP_LOGO - Negativo.svg" alt="FALP Main Logo">
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
