resume on footer

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
       </a>
 
       <div class="footer-right">
+        <a href="path/to/your/resume.pdf" target="_blank">resume</a>
         <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
         <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
       </div>
