footer with resume in all pages

--- a/modus.html
+++ b/modus.html
@@ -195,10 +195,11 @@
         <span class="get-in-text-bottom-mobile">touch</span>
     </a>
         
-        <div class="footer-right">
+       <div class="footer-right">
+            <a href="https://www.icloud.com/iclouddrive/008XTyvyPmEH6UFI731TEegVw#CV" target="_blank">resume</a>
             <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
             <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
-        </div>
+      </div>
     </div>
 </footer>
     <script src="homepage-script.js"></script>
