--- a/Underground.html
+++ b/Underground.html
@@ -188,9 +188,10 @@
         </a>
         
         <div class="footer-right">
+            <a href="https://www.icloud.com/iclouddrive/008XTyvyPmEH6UFI731TEegVw#CV" target="_blank">resume</a>
             <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
             <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
-        </div>
+      </div>
     </div>
 </footer>
 
