--- a/falp.html
+++ b/falp.html
@@ -206,10 +206,11 @@
             <span class="get-in-text-bottom-mobile">touch</span>
         </a>
         
-        <div class="footer-right">
-            <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
-            <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
-        </div>
+    <div class="footer-right">
+        <a href="https://www.icloud.com/iclouddrive/008XTyvyPmEH6UFI731TEegVw#CV" target="_blank">resume</a>
+        <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
+        <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
+    </div>
 </footer>
     <script src="homepage-script.js"></script>
     <script src="search.js"></script>
