--- a/fyted.html
+++ b/fyted.html
@@ -200,10 +200,11 @@
                 <span class="get-in-text-bottom-mobile">touch</span>
             </a>
             
-            <div class="footer-right">
-                <a href="#" target="_blank">instagram</a>
-                <a href="#" target="_blank">linkedin</a>
-            </div>
+        <div class="footer-right">
+            <a href="https://www.icloud.com/iclouddrive/008XTyvyPmEH6UFI731TEegVw#CV" target="_blank">resume</a>
+             <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
+            <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
+        </div>
         </div>
     </footer>
 
