--- a/modus.html
+++ b/modus.html
@@ -120,8 +120,13 @@
         </div>
 
         <!-- First image section -->
-        <div class="placeholder-logo">
-            <img src="images/08-modus/gif-logo.gif" alt="MODUS Logo Animation">
+        <div class="placeholder-container">
+            <div class="placeholder-logo">
+                <img src="images/08-modus/gif-logo.gif" alt="MODUS Logo Animation">
+            </div>
+            <div class="placeholder-section">
+                <img src="images/08-modus/gif-cores.gif" alt="MODUS Animation">
+            </div>
         </div>
 
         <!-- Three Logo Variations -->
@@ -135,11 +140,6 @@
             <div class="logo-item">
                 <h3>MODUS<br>OPERANDI</h3>
             </div>
-        </div>
-
-        <!-- Second image section -->
-        <div class="placeholder-section">
-            <img src="images/08-modus/gif-cores.gif" alt="MODUS Animation">
         </div>
 
         <!-- Three Mobile Stories -->
