--- a/modus.html
+++ b/modus.html
@@ -89,7 +89,7 @@
         <!-- Hero Banner Section - Corrigido para mobile -->
         <div class="hero-banner">
             <div class="hero-image-container">
-                <img src="images/08-modus/banner-site.gif" alt="banner-geral">
+                <img src="images/08-modus/Gif-m.gif" alt="banner-geral">
             </div>
         </div>
         
