--- a/modus.html
+++ b/modus.html
@@ -122,7 +122,7 @@
         <!-- First image section -->
         <div class="placeholder-container">
             <div class="placeholder-logo">
-                <img src="images/08-modus/gif-logo.gif" alt="MODUS Logo Animation">
+                <img src="images/08-modus/Logo-area-seguranca.svg" alt="MODUS Logo Animation">
             </div>
             <div class="placeholder-section">
                 <img src="images/08-modus/gif-cores.gif" alt="MODUS Animation">
