--- a/modus.html
+++ b/modus.html
@@ -156,14 +156,14 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- Two images section -->
             <div class="two-images-section">
                 <div class="two-images-item">
-                    <img src="images/08-modus/image-1.jpg" alt="MODUS Image 1">
+                    <img src="images/08-modus/Cadernos.svg" alt="MODUS Image 1">
                 </div>
                 <div class="two-images-item">
-                    <img src="images/08-modus/image-2.jpg" alt="MODUS Image 2">
+                    <img src="images/08-modus/Credenciais.svg" alt="MODUS Image 2">
                 </div>
             </div>
         </div>
