--- a/modus.html
+++ b/modus.html
@@ -162,8 +162,19 @@
                 <div class="two-images-item">
                     <img src="images/08-modus/Cadernos.png" alt="MODUS Image 1">
                 </div>
-                <div class="two-images-item">
-                    <img src="images/08-modus/credenciais.png" alt="MODUS Image 2">
+                <div class="four-column-grid">
+                    <div class="grid-item">
+                        <img src="images/08-modus/credencial3.png" alt="MODUS Grid 1">
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/08-modus/credencial4.png" alt="MODUS Grid 2">
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/08-modus/credencial1.png" alt="MODUS Grid 3">
+                    </div>
+                    <div class="grid-item">
+                        <img src="images/08-modus/credencial2.png" alt="MODUS Grid 4">
+                    </div>
                 </div>
             </div>
         </div>
