--- a/modus.html
+++ b/modus.html
@@ -119,6 +119,11 @@
             </div>
         </div>
 
+        <!-- Full-width image section -->
+        <div class="full-width-image">
+            <img src="images/08-modus/your-image.jpg" alt="MODUS Full Width Image">
+        </div>
+
         <!-- First image section -->
         <div class="placeholder-container">
             <div class="placeholder-logo">
