--- a/modus.html
+++ b/modus.html
@@ -121,7 +121,7 @@
 
         <!-- Full-width image section -->
         <div class="full-width-image">
-            <img src="images/08-modus/your-image.jpg" alt="MODUS Full Width Image">
+            <img src="images/08-modus/banner-faculdade.png" alt="MODUS Full Width Image">
         </div>
 
         <!-- First image section -->
