--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -145,6 +145,10 @@
             </div>
         </div>
         
+        <div class="glasses-section">
+            <img src="path/to/your/glasses-image.png" alt="Glasses illustration" class="glasses-image">
+        </div>
+
         <!-- Mobile mockups section -->
         <div class="mobile-section">
             <div class="mobile-mockups-container">
