--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -146,7 +146,7 @@
         </div>
         
         <div class="glasses-section">
-            <img src="path/to/your/glasses-image.png" alt="Glasses illustration" class="glasses-image">
+            <img src="images/04-adm/Copos.svg" alt="Glasses illustration" class="glasses-image">
         </div>
 
         <!-- Mobile mockups section -->
