--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -115,10 +115,13 @@
             </div>
         </div>
 
-         <div class="glasses-section">
+    <div class="glasses-section">
+        <div class="glasses-scroll-container">
+            <img src="images/04-adm/Copos.svg" alt="Glasses illustration" class="glasses-image">
             <img src="images/04-adm/Copos.svg" alt="Glasses illustration" class="glasses-image">
         </div>
-        
+    </div>
+    
         <!-- Book spreads gallery - 2x2 grid -->
         <div class="book-spreads">
             <div class="spreads-row">
