--- a/Mariana&Felipe.html
+++ b/Mariana&Felipe.html
@@ -172,8 +172,8 @@
         <span class="nav-arrow-icon"><</span>
         <span class="nav-text">FALP</span>
     </a>
-    <a href="Underground.html" class="nav-project next">
-        <span class="nav-text">Underground Magazine</span>
+    <a href="fyted.html" class="nav-project next">
+        <span class="nav-text">fyted</span>
         <span class="nav-arrow-icon">></span>
     </a>
 </div>
