--- a/SpreadEducationSpreadLove.html
+++ b/SpreadEducationSpreadLove.html
@@ -88,13 +88,13 @@
         <!-- Seção Hero -->
         <div class="hero-image">
             <video class="hero-video" autoplay muted loop playsinline preload="metadata" poster="images/03-SESL/gif-hero-fallback.jpg">
-                <source src="images/03-SESL/Gif_intro-4.mp4" type="video/mp4">
+                <source src="images/03-SESL/gif-curto.mp4" type="video/mp4">
                 <source src="images/03-SESL/gif-hero.webm" type="video/webm">
                 <!-- Fallback image -->
                 Your browser does not support the video tag.
             </video>
             <!-- Imagem de fallback caso o vídeo não carregue -->
-            <img src="images/03-SESL/gif-hero-fallback.jpg" alt="Pessoa servindo vinho em uma mesa de jantar" class="hero-fallback" loading="lazy">
+            <img src="images/01-Homepage/SpreadEducationSpreadLove.webm" alt=" class="hero-fallback" loading="lazy">
         </div>
         
         <!-- Seção do título e descrição -->
