--- a/SpreadEducationSpreadLove.html
+++ b/SpreadEducationSpreadLove.html
@@ -87,7 +87,7 @@
     <main>
         <!-- Seção Hero -->
         <div class="hero-image">
-            <video class="hero-video" autoplay muted loop playsinline preload="metadata" poster="images/03-SESL/gif-hero-fallback.jpg">
+            <video class="hero-video" autoplay muted loop playsinline preload="metadata" poster="images/03-SESL/gif-curto.mp4">
                 <source src="images/03-SESL/gif-curto.mp4" type="video/mp4">
                 <source src="images/03-SESL/gif-hero.webm" type="video/webm">
                 <!-- Fallback image -->
