--- a/SpreadEducationSpreadLove.html
+++ b/SpreadEducationSpreadLove.html
@@ -86,17 +86,15 @@
 
     <main>
         <!-- Seção Hero -->
-        <div class="hero-image">
-            <video class="hero-video" autoplay muted loop playsinline preload="metadata" poster="images/03-SESL/gif-curto.mp4">
-                <source src="images/03-SESL/gif-curto.mp4" type="video/mp4">
-                <source src="images/03-SESL/gif-hero.webm" type="video/webm">
-                <!-- Fallback image -->
-                Your browser does not support the video tag.
-            </video>
-            <!-- Imagem de fallback caso o vídeo não carregue -->
-            <img src="images/01-Homepage/SpreadEducationSpreadLove.webm" alt=" class="hero-fallback" loading="lazy">
-        </div>
-        
+            <div class="hero-image">
+                <video class="hero-video" autoplay muted loop playsinline preload="metadata">
+                    <source src="images/03-SESL/gif-curto.mp4" type="video/mp4">
+                    <source src="images/03-SESL/gif-hero.webm" type="video/webm">
+                </video>
+        <!-- ✅ GIF como fallback para mobile -->
+                <img src="images/03-SESL/hero-animation.gif" alt="Spread Education Spread Love" class="hero-fallback" loading="lazy">
+    </div>
+            
         <!-- Seção do título e descrição -->
         <div class="project-header">
             <div class="content-wrapper">
