--- a/modus.html
+++ b/modus.html
@@ -168,18 +168,7 @@
                     <img src="images/08-modus/Cadernos.png" alt="MODUS Image 1">
                 </div>
                 <div class="four-column-grid">
-                    <div class="grid-item">
-                        <img src="images/08-modus/credencial3.png" alt="MODUS Grid 1">
-                    </div>
-                    <div class="grid-item">
-                        <img src="images/08-modus/credencial4.png" alt="MODUS Grid 2">
-                    </div>
-                    <div class="grid-item">
-                        <img src="images/08-modus/credencial1.png" alt="MODUS Grid 3">
-                    </div>
-                    <div class="grid-item">
-                        <img src="images/08-modus/credencial2.png" alt="MODUS Grid 4">
-                    </div>
+                    <img src="images/08-modus/credenciais-juntas.png" alt="MODUS Credenciais">
                 </div>
             </div>
         </div>
