--- a/modus.html
+++ b/modus.html
@@ -162,6 +162,10 @@
             </div>
         </div>
 
+         <div class="full-width-image">
+            <img src="images/08-modus/post-instagram.png" alt="MODUS Full Width Image">
+        </div>
+
         <!-- Two images section -->
             <div class="two-images-section">
                 <div class="two-images-item">
