--- a/modus.html
+++ b/modus.html
@@ -162,7 +162,7 @@
             </div>
         </div>
 
-         <div class="full-width-image">
+         <div class="social-media">
             <img src="images/08-modus/post-instagram.png" alt="MODUS Full Width Image">
         </div>
 
