--- a/falp.html
+++ b/falp.html
@@ -87,9 +87,12 @@
 
     <main>
         <!-- Hero image section -->
-        <div class="hero-image">
-            <img src="images/06-falp/Prancheta 19.svg" alt="FALP business card on textured background">
-        </div>
+    <div class="hero-image">
+        <video autoplay muted loop>
+            <source src="images/06-falp/logo-animado.mp4" type="video/mp4">
+            Seu navegador não suporta vídeos HTML5.
+        </video>
+    </div>
         
         <!-- Project header section -->
         <div class="project-header">
