--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -145,7 +145,7 @@
         <div class="digital-section">
             <div class="digital-concept-container">
                 <video autoplay muted loop playsinline preload="auto">
-                    <source src="images/04-adm/Mockup-pc.mp4" type="video/mp4">
+                    <source src="images/04-adm/pc.mp4" type="video/mp4">
                     <source src="images/04-adm/Mockup-pc.mov" type="video/quicktime">
                 </video>
             </div>
