--- a/fyted.html
+++ b/fyted.html
@@ -169,9 +169,9 @@
     </button>
       
     <div class="project-nav-bar">
-        <a href="paez.html" class="nav-project prev">
+        <a href="falp.html" class="nav-project prev">
             <span class="nav-arrow-icon"><</span>
-            <span class="nav-text">PAEZ</span>
+            <span class="nav-text">FALP</span>
         </a>
         <a href="A-Arte-da-Mesa.html" class="nav-project next">
             <span class="nav-text">A Arte da Mesa</span>
