--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="custom-cursor.css">
+  <link rel="icon" type="image/x-icon" href="pic-square.ico">
 </head>
 <body>
   <header>
